<resources>
    <string name="app_name">YourTicketApp</string>
    <string name="buttonBack_text">-</string>
    <string name="textViewTitulo_text">Category</string>
    <string name="textViewComida_text">Food</string>
    <string name="textViewRopa_text">Clothes</string>
    <string name="textViewArticulos_text">Items</string>
    <string name="textViewCine_text">Cinema</string>
    <string name="textViewMusica_text">Music</string>
    <string name="textViewEstablecimiento_text">Establishments</string>
    <string name="textViewEstable1_text">Taty</string>
    <string name="textViewEstable2_text">Etafashion</string>
    <string name="textViewEstable3_text">Naf Naf</string>
    <string name="textViewEstable4_text">Forever 21</string>
    <string name="textViewEstable5_text">Exito</string>
    <string name="hintCuponesGuar_text">Search.....</string>
    <string name="textViewQRcode_text">QR code</string>
    <string name="textViewCuponDetails_text">Details</string>
    <string name="textViewEstablishmentTitle_text">"Establishment:"</string>
    <string name="textViewDiscountTitle_text">Promotion:</string>
    <string name="textViewDueDateTitle_text">Due Date:</string>
    <string name="buttonSaveCupon_text">Save Coupon</string>
    <string name="buttonRemoveCupon_text">Remove Coupon</string>
    <string name="text_CuponSaved">Coupon Saved</string>
    <string name="buttonRemoveFromSaved_text">Remove from Saved</string>
    <string name="imageViewQRcode_text">QR_code</string>
    <string name="textViewEstablishment_text">Establishment</string>
    <string name="imageViewMap_text">Map</string>
    <string name="textViewEstablishmentCupon_text">Coupon:</string>
    <string name="imageViewCupon_text">Coupon</string>
    <string name="registrase_con_google">Register with Google</string>
    <string name="email">Email:</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sing_in">Sign In</string>
    <string name="password">Password</string>
    <string name="passwordOption">Password:</string>
    <string name="login">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your Ticket</string>
    <string name="nav_header_subtitle">yourticketapp@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button_update_profile">Update</string>
    <string name="text_informacion_cupon">Coupon Information</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_establishments">Establishments</string>
    <string name="menu_cupones_guardados">Saved Coupons</string>
    <string name="menu_log_out">Log Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textViewLocation_text">Location</string>
    <string name="textViewCoupon_text">Coupon</string>
    <string name="checkBoxRemember_text">Remember Me</string>
    <string name="title_activity_maps">Map</string>
    <string name="textViewRegisterName_text">Name:</string>
    <string name="textViewRegisterLastname_text">Lastname:</string>
    <string name="textViewRegisterEmail_text">Email:</string>
    <string name="textViewRegisterConfirmPassword_text">Confirm Password:</string>
    <string name="editTextName_hint">Name</string>
    <string name="editTextTextLastname_hint">Lastname</string>
    <string name="editTextTextEmail_hint">Email</string>
    <string name="editTextTextPassword_hint">Password</string>
    <string name="editTextTextPasswordConfirm_hint">Password</string>
    <string name="textViewRegisterBirth_text">Date of birth:</string>
    <string name="editTextDateBirth_hint">dd/mm/yyyy</string>
    <string name="imageView_Cat_Ropa_content_description">Image_Category_Clothes</string>
    <string name="imageView_Est_Taty_content_description">imageView_Est_Taty</string>
    <string name="imageView_Est_Etafa_content_description">imageView_Est_Etafa</string>
    <string name="imageView_Est_Naf_content_description">imageView_Est_Naf</string>
    <string name="imageView_Est_Forever_content_description">imageView_Est_Forever</string>
    <string name="imageView_Est_Super_content_description">imageView_Est_Super</string>
    <string name="imageView_Logo_content_description">imageView_Logo</string>
    <string name="imageView_Profile_content_description">imageView_Profile</string>
    <string name="textView_name">Name</string>
    <string name="editTextProfileName_hint">First Name</string>
    <string name="textView_lastname_text">Last Name</string>
    <string name="editTextProfileLastname_hint">Last Name</string>
    <string name="textView_email_text">Email</string>
    <string name="editTextProfileEmail_hint">Email</string>
    <string name="textView_birthday_text">Birthday</string>
    <string name="editTextProfileDate_hint">Date</string>
    <string name="imageView_imagen_content_description">imageView_imagen_item</string>
    <string name="imageView_imagen_cupon_content_description">imageView_imagen_cupon</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>