<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".PerfilFragment">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_Profile"
        android:layout_width="175dp"
        android:layout_height="148dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imageView_Profile_content_description"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toEndOf="@+id/adViewPerfil"
        app:layout_constraintStart_toStartOf="@+id/adViewPerfil"
        app:layout_constraintTop_toBottomOf="@+id/adViewPerfil" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textView_name"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_Profile" />

    <EditText
        android:id="@+id/editTextProfileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz"
        android:ems="10"
        android:hint="@string/editTextProfileName_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView_name"
        app:layout_constraintStart_toStartOf="@+id/textView_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

    <TextView
        android:id="@+id/textView_lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textView_lastname_text"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/editTextProfileName"
        app:layout_constraintStart_toStartOf="@+id/editTextProfileName"
        app:layout_constraintTop_toBottomOf="@+id/editTextProfileName" />

    <EditText
        android:id="@+id/editTextProfileLastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz"
        android:ems="10"
        android:hint="@string/editTextProfileLastname_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView_lastname"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView_lastname"
        app:layout_constraintTop_toBottomOf="@+id/textView_lastname" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textView_email_text"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/editTextProfileLastname"
        app:layout_constraintStart_toStartOf="@+id/editTextProfileLastname"
        app:layout_constraintTop_toBottomOf="@+id/editTextProfileLastname" />

    <EditText
        android:id="@+id/editTextProfileEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextProfileEmail_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/textView_email"
        app:layout_constraintStart_toStartOf="@+id/textView_email"
        app:layout_constraintTop_toBottomOf="@+id/textView_email" />

    <TextView
        android:id="@+id/textView_birthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textView_birthday_text"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/editTextProfileEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextProfileEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextProfileEmail" />

    <EditText
        android:id="@+id/editTextProfileDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextProfileDate_hint"
        android:inputType="text|date"
        app:layout_constraintEnd_toEndOf="@+id/textView_birthday"
        app:layout_constraintStart_toStartOf="@+id/textView_birthday"
        app:layout_constraintTop_toBottomOf="@+id/textView_birthday"

        android:clickable="true"
        android:maxLines="1"/>

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/button_update_profile"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorbotones2"/>

</androidx.constraintlayout.widget.ConstraintLayout>