<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_establecimientos_xml"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EstablecimientosFragment">

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonBackCoupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonBack_text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewEstable"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/adamina"
            android:text="@string/textViewEstablecimiento_text"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout8"
        app:layout_constraintStart_toStartOf="@+id/linearLayout8"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="#F4C6D6"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewEstable1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewEstable1_text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView_Est_Taty"
                    android:layout_width="match_parent"
                    android:layout_height="228dp"
                    android:src="@drawable/img_estable1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="#F4C6D6"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewEstable2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewEstable2_text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView_Est_Etafa"
                    android:layout_width="match_parent"
                    android:layout_height="267dp"
                    android:src="@drawable/img_estable2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="#F4C6D6"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewEstable3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewEstable3_text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView_Est_Naf"
                    android:layout_width="match_parent"
                    android:layout_height="187dp"
                    android:src="@drawable/img_estable3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="#F4C6D6"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewEstable4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewEstable4_text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView_Est_Forever"
                    android:layout_width="match_parent"
                    android:layout_height="204dp"
                    android:src="@drawable/img_estable4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="#F4C6D6"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewEstable5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewEstable5_text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView_Est_Super"
                    android:layout_width="match_parent"
                    android:layout_height="195dp"
                    android:src="@drawable/img_estable5" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>